--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -221,3 +221,10 @@ p code, li code {
   text-transform: lowercase;
   //border: 1px solid var(--text-secondary);
 }
+
+h1 { color: #1e90ff; } /* Blue for H1 */
+h2 { color: #ff6347; } /* Tomato for H2 */
+h3 { color: #32cd32; } /* LimeGreen for H3 */
+h4 { color: #ff69b4; } /* HotPink for H4 */
+h5 { color: #ffa500; } /* Orange for H5 */
+h6 { color: #8a2be2; } /* BlueViolet for H6 */
