--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -222,9 +222,9 @@ p code, li code {
   //border: 1px solid var(--text-secondary);
 }
 
-// h1 { color: #1e90ff; } /* Blue for H1 */
-// h2 { color: #ff6347; } /* Tomato for H2 */
-// h3 { color: #32cd32; } /* LimeGreen for H3 */
-// h4 { color: #ff69b4; } /* HotPink for H4 */
-// h5 { color: #ffa500; } /* Orange for H5 */
-// h6 { color: #8a2be2; } /* BlueViolet for H6 */
+h1 { color: #77bff8; } /* origin for H1 */
+h2 { color: #f7c548; } /* yellow for H2 */
+h3 { color: #5442c4; } /* purpleblue for H3 */
+h4 { color: #e4662c; } /* orange for H4 */
+h5 { color: #6870b3; } /* blue for H5 */
+h6 { color: #cabfb2; } /* gray for H6 */
