--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -224,7 +224,8 @@ p code, li code {
 
 h1 { color: #77bff8; } /* origin for H1 */
 h2 { color: #f7c548; } /* yellow for H2 */
-h3 { color: #5442c4; } /* purpleblue for H3 */
-h4 { color: #e4662c; } /* orange for H4 */
-h5 { color: #6870b3; } /* blue for H5 */
-h6 { color: #cabfb2; } /* gray for H6 */
+h3 { color: #e1bc76; } /* lightyellow for H3 */
+h4 { color: #cabfb2; } /* grayyelllow for H4 */
+h5 { color: #5442c4; } /* purpleblue for H5 */
+h6 { color: #505fb3; } /* blue for H6 */
+
