--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -223,9 +223,9 @@ p code, li code {
 }
 
 h1 { color: #77bff8; } /* origin for H1 */
-h2 { color: #f7c548; } /* yellow for H2 */
+h2 { color: #dea944; } /* yellow for H2 */
 h3 { color: #e1bc76; } /* lightyellow for H3 */
-h4 { color: #cabfb2; } /* grayyelllow for H4 */
-h5 { color: #5442c4; } /* purpleblue for H5 */
-h6 { color: #505fb3; } /* blue for H6 */
+h4 { color: #d4c9bc; } /* grayyelllow for H4 */
+h5 { color: #8382e4; } /* purpleblue for H5 */
+h6 { color: #6376c4; } /* blue for H6 */
 
