--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -227,5 +227,5 @@ h2 { color: #dea944; } /* yellow for H2 */
 h3 { color: #e1bc76; } /* lightyellow for H3 */
 h4 { color: #d4c9bc; } /* grayyelllow for H4 */
 h5 { color: #8382e4; } /* purpleblue for H5 */
-h6 { color: #6376c4; } /* blue for H6 */
+h6 { color: #7ea7e4; } /* blue for H6 */
 
