--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -223,9 +223,9 @@ p code, li code {
 }
 
 h1 { color: #77bff8; } /* origin for H1 */
-h2 { color: #dea944; } /* yellow for H2 */
-h3 { color: #e1bc76; } /* lightyellow for H3 */
-h4 { color: #d4c9bc; } /* grayyelllow for H4 */
+h2 { color: #f3dd94; } /* yellow for H2 */
+h3 { color: #e7c894; } /* lightyellow for H3 */
+h4 { color: #e7d8d3; } /* grayyelllow for H4 */
 h5 { color: #8382e4; } /* purpleblue for H5 */
 h6 { color: #7ea7e4; } /* blue for H6 */
 
