--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -224,7 +224,7 @@ p code, li code {
 
 h1 { color: #77bff8; } /* origin for H1 */
 h2 { color: #f3dd94; } /* yellow for H2 */
-h3 { color: #949be4; } /* purpleblue for H3 */
+h3 { color: #a3a6f2; } /* purpleblue for H3 */
 h4 { color: #e7d8d3; } /* grayyelllow for H4 */
 h5 { color: #e7c894; } /* lightyellow for H5 */
 h6 { color: #7ea7e4; } /* blue for H6 */
