--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -222,10 +222,10 @@ p code, li code {
   //border: 1px solid var(--text-secondary);
 }
 
-h1 { color: #77bff8; } /* origin for H1 */
-h2 { color: #f3dd94; } /* yellow for H2 */
-h3 { color: #a3a6f2; } /* purpleblue for H3 */
-h4 { color: #e7d8d3; } /* grayyelllow for H4 */
-h5 { color: #e7c894; } /* lightyellow for H5 */
-h6 { color: #7ea7e4; } /* blue for H6 */
+h1 { color: #77bff8; } /* origin */
+h2 { color: #a3a6f2; } /* purpleblue */
+h3 { color: #e7d8d3; } /* grayyelllow */
+h4 { color: #f3dd94; } /* yellow */
+h5 { color: #e7c894; } /* lightyellow */
+h6 { color: #7ea7e4; } /* blue */
 
